AM_CXXFLAGS = -I$(top_srcdir)/Source/ 

bin_PROGRAMS = racing
racing_SOURCES = Source/main.cpp \
		Source/3dmath.cpp \
		Source/BoundingBox.cpp \
		Source/Camera.cpp \
		Source/Frustum.cpp \
		Source/Graphics.cpp \
		Source/Matrix.cpp \
		Source/Matrix4f.cpp \
		Source/Model.cpp \
		Source/Player.cpp \
		Source/Sprite.cpp \
		Source/SpriteManager.cpp \
		Source/Vector.cpp
		

AM_CPPFLAGS = -DDATADIR="\"$(datadir)/Racing\""